--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -1,6 +1,7 @@
 "Your Kimai API token" = "API Passwort";
 "Your Kimai URL" = "Kimai URL";
 "Your Kimai username" = "Benutzername";
+"More about Kimai" = "Mehr über Kimai erfahren";
 "Enter your Kimai URL, username and API token to allow access to your data." = "Geben Sie hier Ihre Kimai Verbindungsdaten ein, um den Zugriff auf Ihre Daten zu erlauben.";
 "Please check your settings: Kimai version could not be detected." = "Bitte überprüfen Sie ihre Einstellungen, die Kimai Version konnte nicht erkannt werden.";
 "This plugin works only with Kimai 1.6 and later." = "Dieses Plugin benötigt mindestens Kimai 1.6, Sie verwenden:";
