added some more information about the requirements to use this plugin

--- a/Kimai2.grandtotalplugin/de.lproj/Localizable.strings
+++ b/Kimai2.grandtotalplugin/de.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Your Kimai URL" = "Kimai URL";
 "Your Kimai username" = "Benutzername";
 "More about Kimai" = "Mehr über Kimai erfahren";
-"Enter your Kimai URL, username and API token to allow access to your data." = "Geben Sie hier Ihre Kimai Verbindungsdaten ein, um den Zugriff auf Ihre Daten zu erlauben.";
+"Enter your Kimai URL, username and API token to allow access to your data. The user needs the system-admin role." = "Geben Sie hier Ihre Kimai Verbindungsdaten ein, um den Zugriff auf Ihre Daten zu erlauben.  Der Nutzer benötigt die System-Admin-Rolle.";
 "Please check your settings: Kimai version could not be detected." = "Bitte überprüfen Sie ihre Einstellungen, die Kimai Version konnte nicht erkannt werden.";
 "This plugin works only with Kimai 1.6 and later." = "Dieses Plugin benötigt mindestens Kimai 1.6, Sie verwenden:";
 "Please check your settings: missing or invalid credentials." = "Bitte überprüfen Sie ihre Einstellungen, es wurden fehlende oder falsche Verbindungsdaten erkannt.";
