using API token instead of old username and password combination

--- a/Kimai2.grandtotalplugin/de.lproj/Localizable.strings
+++ b/Kimai2.grandtotalplugin/de.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Your Kimai API token" = "API Passwort";
+"Your Kimai API token" = "API Token";
 "Your Kimai URL" = "Kimai URL";
 "Your Kimai username" = "Benutzername";
 "More about Kimai" = "Mehr über Kimai erfahren";
