--- a/Kimai2.grandtotalplugin/en.lproj/Localizable.strings
+++ b/Kimai2.grandtotalplugin/en.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Your Kimai API token" = "API Password";
+"Your Kimai API token" = "API Token";
 "Your Kimai URL" = "Kimai URL";
 "Your Kimai username" = "Username";
 "More about Kimai" = "More about Kimai";
