--- a/Kimai2.grandtotalplugin/hr.lproj/Localizable.strings
+++ b/Kimai2.grandtotalplugin/hr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Your Kimai API token" = "API lozinka";
+"Your Kimai API token" = "API token";
 "Your Kimai URL" = "Kimai URL";
 "Your Kimai username" = "Korisničko ime";
 "More about Kimai" = "Više o Kimaiju";
